# robot_model

./: CMakeLists.txt  README.md  package.xml
config/: robot_model.rviz
launch/: robot_model.launch
src/: cube_model.cpp  odom_broadcaster.cpp  pos_broadcaster.cpp
